--- a/oclint-rules/rules/custom/CMakeLists.txt
+++ b/oclint-rules/rules/custom/CMakeLists.txt
@@ -4,3 +4,6 @@ BUILD_DYNAMIC_RULES("${BuildNYPropertyCopyCheckRule}")
 
 SET(BuildNYPropertyStrongCheckRule NYPropertyStrongCheck)
 BUILD_DYNAMIC_RULES("${BuildNYPropertyStrongCheckRule}")
+
+SET(BuildNYClassPrefixRule NYClassPrefix)
+BUILD_DYNAMIC_RULES("${BuildNYClassPrefixRule}")
