--- a/oclint-rules/test/custom/CMakeLists.txt
+++ b/oclint-rules/test/custom/CMakeLists.txt
@@ -4,3 +4,6 @@ HLLPropertyCopyCheckRuleTest.cpp)
 
 BUILD_TEST(HLLPropertyStrongCheckRuleTest
 HLLPropertyStrongCheckRuleTest.cpp)
+
+BUILD_TEST(NYClassPrefixRuleRuleTest
+NYClassPrefixRuleRuleTest.cpp)
