--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ oclint-json-compilation-database.zip
 build.zip
 oclint-xcodebuild.zip
 RuleTest/RuleTest.xcodeproj/project.xcworkspace/xcuserdata/qiwen.xcuserdatad/UserInterfaceState.xcuserstate
+RuleTest/RuleTest.xcodeproj/project.xcworkspace/xcuserdata/ny.xcuserdatad/UserInterfaceState.xcuserstate
+RuleTest/RuleTest.xcodeproj/xcuserdata/ny.xcuserdatad/xcschemes/xcschememanagement.plist
