--- a/oclint-rules/rules/custom/CMakeLists.txt
+++ b/oclint-rules/rules/custom/CMakeLists.txt
@@ -7,3 +7,9 @@ BUILD_DYNAMIC_RULES("${BuildNYPropertyStrongCheckRule}")
 
 SET(BuildNYClassPrefixRule NYClassPrefix)
 BUILD_DYNAMIC_RULES("${BuildNYClassPrefixRule}")
+
+SET(BuildNYMethodNamingRule NYMethodNaming)
+BUILD_DYNAMIC_RULES("${BuildNYMethodNamingRule}")
+
+SET(BuildNYPropertyWeakRule NYPropertyWeak)
+BUILD_DYNAMIC_RULES("${BuildNYPropertyWeakRule}")
