--- a/oclint-rules/test/custom/CMakeLists.txt
+++ b/oclint-rules/test/custom/CMakeLists.txt
@@ -31,3 +31,6 @@ NYCaseBreakCheckRuleTest.cpp)
 
 BUILD_TEST(NYBlockCaptureCheckRuleTest
 NYBlockCaptureCheckRuleTest.cpp)
+
+BUILD_TEST(NYCategoryOverrideCheckRuleTest
+NYCategoryOverrideCheckRuleTest.cpp)
