feat: add new rule

--- a/oclint-rules/rules/custom/CMakeLists.txt
+++ b/oclint-rules/rules/custom/CMakeLists.txt
@@ -34,3 +34,6 @@ BUILD_DYNAMIC_RULES("${BuildNYBlockCaptureCheckRule}")
 
 SET(BuildNYCategoryOverrideCheckRule NYCategoryOverrideCheck)
 BUILD_DYNAMIC_RULES("${BuildNYCategoryOverrideCheckRule}")
+
+SET(BuildNYContainerCheckRule NYContainerCheck)
+BUILD_DYNAMIC_RULES("${BuildNYContainerCheckRule}")
