--- a/oclint-rules/test/custom/CMakeLists.txt
+++ b/oclint-rules/test/custom/CMakeLists.txt
@@ -34,3 +34,6 @@ NYBlockCaptureCheckRuleTest.cpp)
 
 BUILD_TEST(NYCategoryOverrideCheckRuleTest
 NYCategoryOverrideCheckRuleTest.cpp)
+
+BUILD_TEST(NYContainerCheckRuleTest
+NYContainerCheckRuleTest.cpp)
